--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <h1 id="titulo">Este es el titulo</h1>
+    <h1 id="titulo">Este es el titulazo</h1>
   </body>
 </html>
